# shinygen

./: .gitignore  CHANGELOG.md  README.html  README.md  README.qmd  README.quarto_ipynb_1  README.quarto_ipynb_2  batch-opencode-go.json  batch.json  debug_extract.py  index.html  inspect_log.py  pyproject.toml  styles.css
.github/workflows/: build-sandbox-images.yml  run-airbnb-asheville-benchmark.yml  run-benchmark-matrix.yml  run-benchmark-quick.yml  run-shinygen-multi.yml  run-shinygen.yml  tests.yml
README_files/libs/bootstrap/: bootstrap-91cecabc65d4a3384a578e02f63d623e.min.css  bootstrap-dark-103b0d587b4155a2b5b750ba2139b216.min.css  bootstrap-dark-c698762c8476abd300ac77094e56bcd3.min.css  bootstrap-f621ca1934ea6aceb10d2b49132d87c8.min.css
README_files/libs/quarto-html/: quarto-syntax-highlighting-98f33259cc9912f9b44620857d989c8f.css  quarto-syntax-highlighting-dark-edd43ff4fb763996a85e9e3149df5d38.css
src/shinygen/: __init__.py  api.py  cli.py  config.py  copilot_agent.py  extract.py  generate.py  iterate.py  judge.py  pricing.py  prompts.py  screenshot.py  screenshot_helper.py  skills.py  validation.py
src/shinygen/dockerfiles/: Dockerfile.python  Dockerfile.r  compose-python.yaml  compose.yaml
src/shinygen/skills/shiny-python-dashboard/: SKILL.md
src/shinygen/skills/visual-qa/: SKILL.md
test_data_csv_files/: air_quality.csv  airbnb-asheville-short.csv  ed_operations.csv  ev_charging_stations.csv  supply_chain.csv  trials_short_50.csv
tests/: test_api.py  test_benchmark_workflow.py  test_cli.py  test_config.py  test_copilot_agent.py  test_extract.py  test_iterate.py  test_judge.py  test_pricing.py  test_prompts.py  test_screenshot_helper.py  test_skills.py  test_validation.py  test_workflow_action_versions.py
(+6 files in other folders)
